fix skada chart in firefox, improve visibility, fix error display overflow

--- a/src/components/ErrorMessage/index.sass
+++ b/src/components/ErrorMessage/index.sass
@@ -11,3 +11,4 @@
             transform: translateY(6px)
         p
             display: inline
+            word-wrap: break-word
