--- a/src/components/SkadaChartRaid/index.sass
+++ b/src/components/SkadaChartRaid/index.sass
@@ -77,19 +77,20 @@
             width: 100%
             z-index: -1
             content: ""
-            background: linear-gradient(0deg, rgba(70,70,70, 0.5) 0%, rgba(255,255,255, 0.1) 98%, rgba(255,255,255, 1) 98%),
+            background: linear-gradient(0deg, rgba(0, 0, 0, 0.3) 0%, rgba(100, 100, 100, 0.3) 100%)
+            border-top: 1px solid white
         *
             font-weight: bold
             color: white
             z-index: 1
             line-height: 30px
-            text-shadow: 0 0 1px #000, 0 0 1px #000, 0 0 1px #000, 0 0 1px #000
+            text-shadow: 0 0 2px #000, 0 0 2px #000, 0 0 2px #000, 0 0 2px #000
 
     &PerformanceValue
         white-space: nowrap
         .direct
             font-weight: bold
-            color: #51fa49
+            color: #71fb6a
 
     &LogContainer
         display: flex
